2004-04-01  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaccelgroup.xml Added descriptions of connect_by_path()
	method,	and accel_map_add_entry(), accel_map_lock_path and
	accel_map_unlock_path() functions.

2004-03-31  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkalignment.xml Add description of set_padding() and
	get_padding() methods available in PyGTK 2.4

2004-03-30  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderertoggle.xml Add description of "inconsistent"
	property added in GTK+ 2.2. Update other property descriptions.

	* pygtk-gtkcheckmenuitem.xml Add description of "draw-as-radio"
	property fro GTK+ 2.4 and add PyGTK2.4 methods set_draw_as_radio() and
	get_draw_as_radio().

2004-03-29  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaccelgroup.xml Add documentation on the connect() method.
	Add a description of the return value for the "accel-activate" signal.

	* pygtk-gtkadjustment.xml Add description of properties available in
	GTK+2.4. Reformat the Attributes description.

	* pygtk-gtkalignment.xml Add description of padding properties
	available in GTK+ 2.4.

	* pygtk-gtkaccessible.xml Added one line description.

	* pygtk-gtkcalendar.xml Added description of properties available in
	GTK+2.4.

	* pygtk-gtkcellrenderertext.xml Added description of properties
	available in GTK+2.4.

2004-03-25  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml Remove description of atom_intern function.

	* pygtk-gdk-function.xml Add description of atom_intern function. Fixes
	#137935 (thanks to Erik Grinaker).

	* pygtk-gtkdrawingarea.xml Add explanation that drawing is done on the
	contained gtk.gdk.Window using the gdk.Drawable methods. Fixes #136297.
	(thanks to pachi@mmn-arquitectos.com)

2004-03-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmessagedialog.xml (MessageDialog) Remove
	gtk.DIALOG_NO_SEPARATOR from the list of valid flags. Fixes #136984.
	(thanks to j.jordens and Eric Grinaker).
