@@ -1,8 +1,17 @@
+2004-04-02  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkbutton.xml Added descriptions of "focus-on-click", "xalign"
+	and "yalign" propertiees for GTK+ 2.4. Added descriptions of the
+	set_alignment(), get_alignment(), set_focus_on_click() and
+	get_focus_on_click() methods available in PyGTK 2.4
+
 2004-04-01  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkaccelgroup.xml Added descriptions of connect_by_path()
 	method,	and accel_map_add_entry(), accel_map_lock_path and
 	accel_map_unlock_path() functions.
+
+	* pygtk-gtkalignment.xml Fix small bug in get_padding() description.
 
 2004-03-31  John Finlay  <finlay@moeraki.com>
 
